--- a/atividade-02/backend/package.json
+++ b/atividade-02/backend/package.json
@@ -5,6 +5,7 @@
     "express": "^4.19.2",
     "protobufjs": "^7.3.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "xml2js": "^0.6.2"
   }
 }
