--- a/atividade-02/backend/package.json
+++ b/atividade-02/backend/package.json
@@ -6,6 +6,7 @@
     "protobufjs": "^7.3.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "yamljs": "^0.3.0"
   }
 }
